# dotfiles

./: .editorconfig  .gitconfig  .gitignore  .vimrc  LICENSE-APACHE  LICENSE_APACHE  README.md  list-installed.txt
c/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  day_mon1.c  test.c
csharp/: README.md
go/: .editorconfig  mj.go
java/: .gitignore  java-formatter.xml
javascript/: .editorconfig  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc.cjs  README.md  tsconfig.json
licenses/: license_notice.txt
python/: .editorconfig  .gitignore  README.md
ts/: tsconfig.json
typescript/: biome.json  tsconfig.json
